tests/spec/non_conformant/errors/loop_for/numeric/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/loop-for/numeric"
#[allow(unused)]
use super::rsass;

// From "sass-spec/spec/non_conformant/errors/loop-for/numeric/lower_eval.hrx"

// Ignoring "lower_eval", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/loop-for/numeric/lower_expand.hrx"

// Ignoring "lower_expand", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/loop-for/numeric/upper_eval.hrx"

// Ignoring "upper_eval", error tests are not supported yet.

// From "sass-spec/spec/non_conformant/errors/loop-for/numeric/upper_expand.hrx"

// Ignoring "upper_expand", error tests are not supported yet.
